samples/_failures_safe/1761339355_893597_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa06b7b6.c: In function ‘main’:
./samples/SAFE/__tmp_aa06b7b6.c:184:18: error: ‘STATE_READ’ undeclared (first use in this function); did you mean ‘STATE_READING’?
  184 |             case STATE_READ
      |                  ^~~~~~~~~~
      |                  STATE_READING
./samples/SAFE/__tmp_aa06b7b6.c:184:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_aa06b7b6.c:184:13: error: expected ‘:’ or ‘...’ at end of input
  184 |             case STATE_READ
      |             ^~~~
./samples/SAFE/__tmp_aa06b7b6.c:184:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa06b7b6.c:184:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa06b7b6.c:184:13: error: expected declaration or statement at end of input
